# ai-assistant

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
config/: config.example.yaml  config.old.yaml  config_manager.py
core/: action_manager.py  ai_connector.py  audio_manager.py  clipboard_util.py  gemini_connector.py  input_manager.py  keyboard_automation.py  model_connector.py  model_factory.py  notes_manager.py  notification_manager.py  openai_connector.py  plugin_manager.py  response_processor.py  screenshot.py  session_manager.py
docs/: design_diagram.md  design_plan.md  progress.md
logs/: llm_responses.jsonl
notes/: notes.json
plugins/: __init__.py  example_plugin.py
prompts/: system_prompt.md
utils/: new_session.py
